fixed overflow in footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -275,8 +275,46 @@ header .navbar-default .navbar-toggle .icon-bar {
 /** PAGE - Bike trails **/
 
 #trails {
-	background-image: linear-gradient(to bottom, #91d940, #402a0f);
+	background-image: linear-gradient( #91d940, #402a0f); 
 	color:  #fff;
+	/* padding-bottom: 20px; */
+	/* margin-bottom: 20px; */
+}
+
+
+.trail {
+	margin: 10px 0;
+}
+
+.trail h3 {
+	font-weight: 600;
+	font-size: 1.2em;
+	color: #402a0f 	;
+	padding-bottom: 5px;
+}
+
+.trail p {
+		font-size: 	.8em;
+}
+
+.trail img {
+	width: 100%;
+}
+
+
+/*
+.photo {
+	/* width: 20px;
+	margin: 20px;
+	padding: 20px; 
+}
+*/
+.info {
+
+/* 	width: 100%;
+	margin: 50px;
+	padding: 20px; */
+
 }
 
 
@@ -287,27 +325,12 @@ header .navbar-default .navbar-toggle .icon-bar {
 #402a0f; (rgba(64, 42, 15, 1))
 #ebe560;
 
-/*
-.photo {
-	/* width: 20px;
-	margin: 20px;
-	padding: 20px; 
-}
 */
-.info {
-/* 	width: 100%;
-	margin: 50px;
-	padding: 20px; */
-
-}
-
 
 /* Footer */
 
 footer {
-	background-color: #402a0f	;
-	margin-bottom: 0px;
-	margin-bottom: -100px;
+	 background-color: #402a0f; 
 }
 
 
